--- a/project/react_project/src/navBar.css
+++ b/project/react_project/src/navBar.css
@@ -3,12 +3,17 @@
     margin-left: 2%;
     width: 10%;
     height: 100%;
+    position: fixed;
+    padding-top: 20px;
 }
 
 .navBarContent {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
+    font-size: x-large;
     padding: 20%;
+    border: 3px solid black;
+    border-radius: 10%;
 }
 
 .profileWindow {
