developed the react forward

--- a/project/react_project/src/App.css
+++ b/project/react_project/src/App.css
@@ -28,4 +28,10 @@
   color: #61dafb;
 }
 
+.NotLoggedInWarning {
+  background-color: lightcoral;
+  color: whitesmoke;
+  text-align: center;
+}
+
 
