React far further

--- a/project/react_project/src/login.css
+++ b/project/react_project/src/login.css
@@ -9,3 +9,9 @@
     align-content: center;
     width: 50%;
 }
+
+.Invalid {
+    background-color: aliceblue;
+    align-content: center;
+    color: red;
+}
