--- a/project/react_project/src/navBar.css
+++ b/project/react_project/src/navBar.css
@@ -15,6 +15,16 @@
     border-radius: 10%;
 }
 
+.loggedInContent {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: large;
+    padding: 20%;
+    border: 3px solid black;
+    border-radius: 10%;
+}
+
+
 .profileWindow {
     background-color: darkgray;
     margin-left: 2%;
